@@ -1,6 +1,7 @@
 - Replace sassc-rails with dartsass-sprockets, as it's a compatible replacement, to ease migration to dartsass
 - Use lowercase response headers as required by rack 3
 - Add filters to list action
+- Add prompt option to action link
 - Fix for jQuery 3
 - Fix position popup for collection action links
 - Fix recordselect in form open with position popup
